--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "enzyme": "^3.11.0",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "enzyme-adapter-react-16": "^1.15.6",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
